Further improvements
- make compiled code JAVA 8 compatible

- enhance integration testing for:
  - Xtext 2.17.1 and Java 8
  - Xtext 2.29.0 and Java 17+

- add integration test for a Xtext language
  HelloWorld.xtend compilation

- Fix dependency version resolution
  of xtext-dev-bom to become these dependency versions
  effective for the resolved xtextStandalone configuration

- add StandaloneBuilder configuration properties:
  - failOnValidationError, default: true
  - incrementalBuild, default: false